Still can't get word wrap on taglists to work correctly, but getting there.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,7 +99,7 @@ li { margin-top: 0.5em;}
 }
 
 .taglist {
-    word-wrap: break-word
+    word-wrap: normal
 }
 
 .article-content a:visited, a:visited.readmore {
